--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,9 @@ img{
     max-width: 50%;
     height: auto;
 }
+@media ( min-width: 576px){
+    img{
+        max-width: 100%;
+        height: auto;
+    }
+}
