--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,7 @@
-img{
-    max-width: 50%;
-    height: auto;
+.rounded {
+  max-width: 50%;
+  height: auto;
 }
-@media ( min-width: 576px){
-    img{
-        max-width: 100%;
-        height: auto;
-    }
-    
+.card-img-top{
+  height: 15vh;
 }
